split page - removing vh units to test scroll issues on Iphone

--- a/scss/components/_split-page.scss
+++ b/scss/components/_split-page.scss
@@ -14,7 +14,7 @@
     overflow: visible;
 
     @media screen and (min-width: 1020px) {
-      height: 100vh;
+      height: 100%;
       overflow: hidden;
     }
 
@@ -22,7 +22,7 @@
     .word-spinner {
 
       @media screen and (min-width: 1020px) {
-        height: 50vh;
+        height: 50%;
       }
     }
   }
